# Athena-Public

./: .gitignore  AGENTS.md  README.md  athena.yaml  llms.txt  pyproject.toml  sitemap.xml
.agent/workflows/: research.md
.context/: CANONICAL.md
.github/scripts/: check_links.py  privacy_scan.py
.github/workflows/: link-checker.yml  privacy-gate.yml
Athena-Public.wiki/: FAQ.md  Getting-Started.md  Home.md  The-Compounding-Effect.md  Use-Cases.md  Workflow-Reference.md
docs/: ABOUT_ME.md  ARCHITECTURE.md  CAPABILITIES.md  CASE_STUDIES.md  CHANGELOG.md  FAQ.md  FEATURES.md  GETTING_STARTED.md  GLOSSARY.md  GRAPHRAG.md  KNOWLEDGE_GRAPH.md  MANIFESTO.md  MULTI_MODEL_STRATEGY.md  REFERENCES.md  RERANKER.md  SEMANTIC_SEARCH.md  SPEC_SHEET.md  TAG_INDEX.md  TOP_10_PROTOCOLS.md  USE_CASES.md  VECTORRAG.md  YOUR_FIRST_SESSION.md
docs/marketing/: reddit_draft_amnesia.md  reddit_post_v9.1.0.md
docs/protocols/: 500-diagnostic-relay.md  529-diagnostic-relay.md
docs/research/: README.md
examples/case_studies/: CS-005-min-max-purchasing-framework.md  Case_Blog_Evolution_2026.md  Case_Sam_Altman_AI_Future.md  Case_Web_Design_2026.md  Decision_Framework_Application.md
examples/concepts/: anti_hallucination.md
examples/config/: public_manifest.example.yaml
examples/framework/: System_Manifest.md  System_Principles.md
examples/protocols/architecture/: ARC-528-execution-awareness.md  ARC-530-conditional-skill-activation.md
examples/protocols/decision/_archived/: 308-prima-facie-actuality-gap.md
examples/protocols/strategy/: STR-106-min-max-optimization.md
examples/protocols/verification/: VER-171-cross-model-validation.md
examples/protocols/workflow/: WFL-130-vibe-coding.md
examples/scripts/: canonical_tiered_split.py  embed_codex.py  supabase_sync.py
examples/skills/business/client-pricing/: SKILL.md
examples/skills/business/sovereign-economics-engine/: SKILL.md
examples/skills/coding/agentic-code-orchestrator/: SKILL.md
examples/skills/research/data-analysis/: SKILL.md
examples/templates/: ios_shortcut_template.md
examples/workflows/: _shared.md  deploy.md  end.md  gto.md  research.md  start.md  ultrastart.md
scripts/: pre_deploy_scan.sh
src/athena/core/: diagnostic_relay.py
src/athena/memory/: vectors.py
src/athena/tools/: reranker.py
wiki/: FAQ.md  Getting-Started.md  Home.md  Philosophy.md  The-Compounding-Effect.md  Workflow-Reference.md
(+8 files in other folders)
